@@ -24,6 +24,7 @@ sourceSets {
 
 run {
     mainClassName = 'Index'
+    args = ['--add-modules java.se.ee']
 }
 
 test {
@@ -37,5 +38,5 @@ repositories {
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     compile group: 'org.hibernate', name: 'hibernate-core', version: '5.2.16.Final'
-    compile group: 'org.xerial', name: 'sqlite-jdbc', version: '3.21.0.1'
+    compile group: 'org.apache.derby', name: 'derbyclient', version: '10.12.1.1'
 }
